refactor(packages-boilerplate-copy-and-paste): fixed packages name

--- a/packages-boilerplate-copy-and-paste/quasar-app-extension-ui-component/package.json
+++ b/packages-boilerplate-copy-and-paste/quasar-app-extension-ui-component/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "vue-cli-service build --target lib --name new_vue_ts_component",
+    "build": "vue-cli-service build --target lib --name quasar-app-extension-ui-component",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix",
     "lint:fix:src": "vue-cli-service lint --fix component/ && vue-cli-service lint --fix src/",
