--- a/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/package.json
+++ b/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@quasar-enterprise-monorepo/new_vue_ts_component",
+  "name": "@quasar-enterprise-monorepo/vue-ts-component-plugin",
   "version": "0.0.1",
   "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
   "license": "MIT",
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "vue-cli-service build --target lib --name new_vue_ts_component",
+    "build": "vue-cli-service build --target lib --name vue-ts-component-plugin",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix",
     "lint:fix:src": "vue-cli-service lint --fix src/",
