--- a/packages-boilerplate-copy-and-paste/quasar-webapp/package.json
+++ b/packages-boilerplate-copy-and-paste/quasar-webapp/package.json
@@ -56,7 +56,8 @@
     "vuelidate": "^0.7.6",
     "vuelidate-property-decorators": "^1.0.28",
     "vuex": "^3.6.0",
-    "vuex-class": "^0.3.2"
+    "vuex-class": "^0.3.2",
+    "vuex-composition-helpers": "^1.0.22"
   },
   "devDependencies": {
     "@quasar-enterprise-monorepo/quasar-testing": "*",
