--- a/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/package.json
+++ b/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/package.json
@@ -29,6 +29,7 @@
     "dist"
   ],
   "dependencies": {
+    "@vue/composition-api": "^0.6.7",
     "core-js": "^3.8.2",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
