--- a/packages-boilerplate-copy-and-paste/vue-ts-component-quasar/package.json
+++ b/packages-boilerplate-copy-and-paste/vue-ts-component-quasar/package.json
@@ -29,6 +29,7 @@
   ],
   "dependencies": {
     "@quasar/extras": "^1.9.13",
+    "@vue/composition-api": "^0.6.7",
     "core-js": "^3.8.2",
     "quasar": "^1.15.0",
     "vue": "^2.6.12",
