--- a/packages-boilerplate-copy-and-paste/quasar-app-extension-ui-component/package.json
+++ b/packages-boilerplate-copy-and-paste/quasar-app-extension-ui-component/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "vue-cli-service build --target lib --name quasar-app-extension-ui-component",
+    "build": "vue-cli-service build --target lib --name new_vue_ts_component",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix",
     "lint:fix:src": "vue-cli-service lint --fix component/ && vue-cli-service lint --fix src/",
@@ -29,10 +29,10 @@
   ],
   "main": "src/index.ts",
   "dependencies": {
-    "@quasar/extras": "^1.9.13",
     "@vue/composition-api": "^0.6.7",
-    "core-js": "^3.8.2",
-    "quasar": "^1.15.0",
+    "@quasar/extras": "^1.9.17",
+    "core-js": "^3.9.0",
+    "quasar": "^1.15.4",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2"
@@ -44,14 +44,14 @@
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue-i18n": "*",
-    "@vue/cli-plugin-babel": "^4.5.10",
-    "@vue/cli-plugin-eslint": "^4.5.10",
-    "@vue/cli-plugin-typescript": "^4.5.10",
-    "@vue/cli-plugin-unit-jest": "^4.5.10",
-    "@vue/cli-service": "^4.5.10",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-typescript": "^4.5.11",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "1.1.2",
+    "@vue/test-utils": "1.1.3",
     "babel-loader": "^8.2.2",
     "hygen": "^6.0.4",
     "majestic": "^1.8.0",
@@ -59,9 +59,9 @@
     "stylus-loader": "^3.0.2",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "~4.1.3",
+    "typescript": "~4.1.5",
     "vue-cli-plugin-quasar": "^3.0.1",
-    "vue-cli-plugin-styleguidist": "^4.34.2",
+    "vue-cli-plugin-styleguidist": "^4.35.0",
     "vue-template-compiler": "^2.6.12",
     "wallaby-vue-compiler": "^1.0.6"
   },
