--- a/packages-boilerplate-copy-and-paste/quasar-webapp/tsconfig.json
+++ b/packages-boilerplate-copy-and-paste/quasar-webapp/tsconfig.json
@@ -7,9 +7,11 @@
       "assets/*": ["src/assets/*"],
       "boot/*": ["src/boot/*"],
       "components/*": ["src/components/*"],
+      "config/*": ["src/config/*"],
       "cypress/*": ["test/cypress/*"],
       "drivers/*": ["src/drivers/*"],
       "enums/*": ["src/enums/*"],
+      "hooks/*": ["src/hooks/*"],
       "jest/*": ["test/jest/*"],
       "jest/tests/*": ["test/jest/__tests__/*"],
       "jest/utils/*": ["test/jest/utils/*"],
@@ -24,13 +26,10 @@
     },
     "baseUrl": "."
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.js",
-    "src/**/*.vue",
-    "test/**/*.ts",
-    "test/**/*.vue"
-  ],
-  "exclude": ["_templates", "dist", "node_modules", ".quasar"]
+  "exclude": [
+    "_templates",
+    "dist",
+    "node_modules",
+    ".quasar"
+  ]
 }
