--- a/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/package.json
+++ b/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@quasar-enterprise-monorepo/vue-ts-component-plugin",
+  "name": "@quasar-enterprise-monorepo/new_vue_ts_component",
   "version": "0.0.1",
   "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
   "license": "MIT",
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
-    "build": "vue-cli-service build --target lib --name vue-ts-component-plugin",
+    "build": "vue-cli-service build --target lib --name new_vue_ts_component",
     "lint": "vue-cli-service lint",
     "lint:fix": "vue-cli-service lint --fix",
     "lint:fix:src": "vue-cli-service lint --fix src/",
@@ -30,7 +30,7 @@
   ],
   "dependencies": {
     "@vue/composition-api": "^0.6.7",
-    "core-js": "^3.8.2",
+    "core-js": "^3.9.0",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2"
@@ -42,21 +42,21 @@
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue-i18n": "*",
     "@kahirokunn/vuedts": "^1.3.4",
-    "@vue/cli-plugin-babel": "^4.5.10",
-    "@vue/cli-plugin-eslint": "^4.5.10",
-    "@vue/cli-plugin-typescript": "^4.5.10",
-    "@vue/cli-plugin-unit-jest": "^4.5.10",
-    "@vue/cli-service": "^4.5.10",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-typescript": "^4.5.11",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "1.1.2",
+    "@vue/test-utils": "1.1.3",
     "babel-loader": "^8.2.2",
     "hygen": "^6.0.4",
     "majestic": "^1.8.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
-    "typescript": "~4.1.3",
-    "vue-cli-plugin-styleguidist": "^4.34.2",
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-styleguidist": "^4.35.0",
     "vue-template-compiler": "^2.6.12",
     "wallaby-vue-compiler": "^1.0.6",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
