--- a/applications/webapp/package.json
+++ b/applications/webapp/package.json
@@ -37,25 +37,26 @@
     "@quasar-enterprise-monorepo/base-store": "*",
     "@quasar-enterprise-monorepo/text-utils": "*",
     "@quasar-enterprise-monorepo/vue-router-utils": "*",
+    "@quasar-enterprise-monorepo/vuelidate-utils": "*",
     "@quasar-enterprise-monorepo/vuex-utils": "*",
-    "@quasar/app": "^2.1.12",
-    "@quasar/extras": "^1.9.12",
+    "@quasar/app": "^2.1.14",
+    "@quasar/extras": "^1.9.17",
     "@vue/composition-api": "^0.6.7",
-    "core-js": "^3.8.1",
+    "core-js": "^3.8.3",
     "fast-memoize": "^2.5.2",
-    "graphql": "^15.4.0",
+    "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
-    "quasar": "^1.14.7",
+    "quasar": "^1.15.3",
     "transform-object-keys": "^1.0.3",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
-    "vue-i18n": "^8.22.2",
+    "vue-i18n": "^8.22.4",
     "vue-loadable": "^0.2.0",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.4.9",
+    "vue-router": "^3.5.1",
     "vuelidate": "^0.7.6",
     "vuelidate-property-decorators": "^1.0.28",
-    "vuex": "^3.6.0",
+    "vuex": "^3.6.2",
     "vuex-class": "^0.3.2",
     "vuex-composition-helpers": "^1.0.22"
   },
@@ -71,14 +72,18 @@
     "dotenv-webpack": "^2.0.0",
     "@types/vuelidate": "^0.7.13",
     "@quasar/cli": "^1.1.3",
-    "@quasar/quasar-app-extension-dotenv": "^1.0.5",
+    "@quasar/quasar-app-extension-dotenv": "^1.1.0",
     "@quasar/quasar-app-extension-testing": "^1.0.3",
-    "@quasar/quasar-app-extension-testing-unit-jest": "^2.1.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@vue/test-utils": "^1.1.2",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^2.2.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@vue/test-utils": "^1.1.3",
     "hygen": "^6.0.4",
-    "vue-styleguidist": "^4.34.2",
-    "workbox-webpack-plugin": "^6.0.2"
+    "moment-locales-webpack-plugin": "^1.2.0",
+    "vue-styleguidist": "^4.35.0",
+    "serverless": "2.25.1",
+    "serverless-prune-plugin": "1.4.3",
+    "serverless-s3-sync": "1.16.1",
+    "workbox-webpack-plugin": "^6.1.0"
   },
   "engines": {
     "node": ">= 12",
