--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     ]
   },
   "scripts": {
+    "postinstall": "manypkg check",
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "lerna run build:ci --stream",
-    "clean": "lerna clean -y && npx rimraf node_modules && npx rimraf yarn.lock",
+    "clean": "manypkg exec npx rimraf node_modules && manypkg exec npx rimraf coverage && manypkg exec npx rimraf dist && rm -rf node_modules && npx rimraf yarn.lock",
+    "commit": "git-cz",
     "exec:in": "lerna run --stream --scope ",
     "install:packages": "yarn && yarn bootstrap",
     "lint": "lerna run lint --stream",
@@ -29,40 +31,29 @@
     "test:silent": "jest --reporters jest-silent-reporter --collectCoverage=false",
     "test:jest": "jest --collectCoverage=false",
     "update:check": "ncu && lerna run update:check --stream",
-    "update:update": "ncu -u && lerna run update:update --stream && yarn install --force"
+    "update:update": "ncu -u && lerna run update:update --stream && yarn install --force && yarn manypkg fix"
   },
-  "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+  "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/config-lerna-scopes": "^11.0.0",
-    "@types/chart.js": "^2.9.29",
+    "@manypkg/cli": "^0.17.0",
+    "@types/chart.js": "^2.9.30",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.20",
-    "@types/jsdom": "^16.2.5",
-    "@types/node": "^14.14.20",
+    "@types/jsdom": "^16.2.6",
+    "@types/node": "^14.14.31",
     "@types/vfile-message": "^2.0.0",
     "@types/webpack": "^4.41.26",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "commitizen": "^4.2.2",
-    "concurrently": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "4.15.1",
+    "@typescript-eslint/parser": "4.15.1",
+    "commitizen": "^4.2.3",
+    "concurrently": "^6.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.17.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint": "^7.20.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-unicorn": "^26.0.0",
-    "eslint-plugin-vue": "^7.4.1",
-    "eslint-plugin-vue-i18n": "^0.3.0",
-    "identity-obj-proxy": "^3.0.0",
-    "husky": "^4.3.7",
+    "husky": "^4.3.8",
     "hygen": "^6.0.4",
     "jest": "^26.6.3",
     "jest-date-mock": "^1.0.8",
@@ -74,11 +65,14 @@
     "jest-watch-typeahead": "^0.6.1",
     "jest-watch-yarn-workspaces": "^1.1.0",
     "lerna": "^3.22.1",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^10.5.4",
     "majestic": "^1.8.0",
-    "npm-check-updates": "^10.2.5",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
+    "npm-check-updates": "^11.1.4",
+    "serverless": "2.25.2",
+    "serverless-prune-plugin": "1.4.3",
+    "serverless-s3-sync": "1.16.1",
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5",
     "webpack": "^4.44.2",
     "webpack-manifest-plugin": "^3.0.0"
   },
