--- a/packages/eslint-import/package.json
+++ b/packages/eslint-import/package.json
@@ -2,33 +2,36 @@
   "name": "@quasar-enterprise-monorepo/eslint-config-monorepo-import",
   "version": "0.0.1",
   "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
-  "license": "MIT",
+  "license": "SEE LICENSE IN KOVI.md",
   "scripts": {
-    "build":"echo \"Skip this step\"",
-    "docs":"echo \"Skip this step\"",
-    "lint":"echo \"Skip this step\"",
-    "lint:fix":"echo \"Skip this step\"",
-    "lint:fix:src":"echo \"Skip this step\"",
-    "lint:fix:test":"echo \"Skip this step\"",
-    "lint:src":"echo \"Skip this step\"",
-    "lint:test":"echo \"Skip this step\"",
-    "precommit":"echo \"Skip this step\"",
-    "prepare":"echo \"Skip this step\"",
-    "start":"echo \"Skip this step\"",
-    "test":"echo \"Skip this step\"",
-    "test:coverage":"echo \"Skip this step\"",
-    "test:ui":"echo \"Skip this step\"",
-    "test:unit":"echo \"Skip this step\"",
-    "test:watch":"echo \"Skip this step\"",
-    "test:watchAll":"echo \"Skip this step\"",
-    "update:check":"echo \"Skip this step\"",
-    "update:update":"echo \"Skip this step\""
+    "build": "echo \"Skip this step\"",
+    "docs": "echo \"Skip this step\"",
+    "lint": "echo \"Skip this step\"",
+    "lint:fix": "echo \"Skip this step\"",
+    "lint:fix:src": "echo \"Skip this step\"",
+    "lint:fix:test": "echo \"Skip this step\"",
+    "lint:src": "echo \"Skip this step\"",
+    "lint:test": "echo \"Skip this step\"",
+    "precommit": "echo \"Skip this step\"",
+    "prepare": "echo \"Skip this step\"",
+    "start": "echo \"Skip this step\"",
+    "test": "echo \"Skip this step\"",
+    "test:coverage": "echo \"Skip this step\"",
+    "test:ui": "echo \"Skip this step\"",
+    "test:unit": "echo \"Skip this step\"",
+    "test:watch": "echo \"Skip this step\"",
+    "test:watchAll": "echo \"Skip this step\"",
+    "update:check": "ncu",
+    "update:update": "ncu -u"
   },
   "files": [
-    ""
+    "index.js",
+    "rules"
   ],
   "main": "index.js",
   "dependencies": {
-    "@pkgr/utils": "^0.4.5"
+    "@pkgr/utils": "^0.6.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
