--- a/packages/eslint-jest/package.json
+++ b/packages/eslint-jest/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@kovi-frontend/eslint-config-monorepo-jest",
+  "name": "@quasar-enterprise-monorepo/eslint-config-monorepo-jest",
   "version": "0.0.1",
   "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
-  "license": "SEE LICENSE IN KOVI.md",
+  "license": "MIT",
   "scripts": {
     "build": "echo \"Skip this step\"",
     "docs": "echo \"Skip this step\"",
