--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     ]
   },
   "scripts": {
-    "postinstall": "manypkg check",
+    "postinstall": "manypkg check && yarn manypkg fix",
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "lerna run build:ci --stream",
     "clean": "manypkg exec npx rimraf node_modules && manypkg exec npx rimraf coverage && manypkg exec npx rimraf dist && rm -rf node_modules && npx rimraf yarn.lock",
@@ -34,10 +34,10 @@
     "update:update": "ncu -u && lerna run update:update --stream && yarn install --force && yarn manypkg fix"
   },
   "dependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@commitlint/config-lerna-scopes": "^11.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.0",
+    "@commitlint/cli": "^12.0.0",
+    "@commitlint/config-conventional": "^12.0.0",
+    "@commitlint/config-lerna-scopes": "^12.0.0",
     "@manypkg/cli": "^0.17.0",
     "@types/chart.js": "^2.9.30",
     "@types/graphql": "^14.5.0",
@@ -46,8 +46,6 @@
     "@types/node": "^14.14.31",
     "@types/vfile-message": "^2.0.0",
     "@types/webpack": "^4.41.26",
-    "@typescript-eslint/eslint-plugin": "4.15.1",
-    "@typescript-eslint/parser": "4.15.1",
     "commitizen": "^4.2.3",
     "concurrently": "^6.0.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -67,7 +65,7 @@
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.4",
     "majestic": "^1.8.0",
-    "npm-check-updates": "^11.1.4",
+    "npm-check-updates": "^11.1.8",
     "serverless": "2.25.2",
     "serverless-prune-plugin": "1.4.3",
     "serverless-s3-sync": "1.16.1",
