--- a/vuex-common-stores/base-store/package.json
+++ b/vuex-common-stores/base-store/package.json
@@ -27,30 +27,31 @@
   ],
   "dependencies": {
     "@quasar-enterprise-monorepo/text-utils": "*",
-    "@quasar/extras": "^1.9.13",
-    "core-js": "^3.8.2",
-    "quasar": "^1.15.0",
+    "@quasar/extras": "^1.9.17",
+    "core-js": "^3.9.0",
+    "quasar": "^1.15.4",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@quasar-enterprise-monorepo/quasar-testing": "*",
+    "@kahirokunn/vuedts": "^1.3.4",
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue-i18n": "*",
-    "@kahirokunn/vuedts": "^1.3.4",
-    "@vue/cli-plugin-babel": "^4.5.10",
-    "@vue/cli-plugin-eslint": "^4.5.10",
-    "@vue/cli-plugin-typescript": "^4.5.10",
-    "@vue/cli-plugin-unit-jest": "^4.5.10",
-    "@vue/cli-service": "^4.5.10",
+    "@quasar-enterprise-monorepo/quasar-testing": "*",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-typescript": "^4.5.11",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
+    "@vue/composition-api": "^0.6.7",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "1.1.2",
+    "@vue/test-utils": "^1.1.3",
     "babel-loader": "^8.2.2",
     "hygen": "^6.0.4",
     "majestic": "^1.8.0",
@@ -58,13 +59,12 @@
     "stylus-loader": "^3.0.2",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "~4.1.3",
+    "typescript": "^4.1.5",
     "vue-cli-plugin-quasar": "~3.0.1",
-    "vue-cli-plugin-styleguidist": "^4.34.2",
+    "vue-cli-plugin-styleguidist": "^4.35.0",
     "vue-template-compiler": "^2.6.12",
-    "wallaby-vue-compiler": "^1.0.6",
-    "@vue/composition-api": "^0.6.7",
-    "vuex-composition-helpers": "^1.0.22"
+    "vuex-composition-helpers": "^1.0.22",
+    "wallaby-vue-compiler": "^1.0.6"
   },
   "engines": {
     "node": ">= 12",
