--- a/packages-boilerplate-copy-and-paste/service-plugin/tsconfig.json
+++ b/packages-boilerplate-copy-and-paste/service-plugin/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "include": [
-    "src",
-    "types",
-    "test"
+    "src"
   ],
   "compilerOptions": {
     "baseUrl": ".",
@@ -13,5 +11,9 @@
       ]
     }
   },
-  "exclude": ["_templates", "dist", "node_modules"]
+  "exclude": [
+    "_templates",
+    "dist",
+    "node_modules"
+  ]
 }
