--- a/utils/text-utils/package.json
+++ b/utils/text-utils/package.json
@@ -41,6 +41,7 @@
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "hygen": "^6.0.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
