--- a/utils/text-utils/tsconfig.json
+++ b/utils/text-utils/tsconfig.json
@@ -5,7 +5,6 @@
   ],
   "compilerOptions": {
     "baseUrl": ".",
-    "rootDir": "./src",
     "paths": {
       "src/*": [
         "src/*"
@@ -15,7 +14,6 @@
   "exclude": [
     "_templates",
     "dist",
-    "node_modules",
-    "types"
+    "node_modules"
   ]
 }
