chore: updated vue-router-utils

--- a/utils/vue-router-utils/package.json
+++ b/utils/vue-router-utils/package.json
@@ -14,7 +14,6 @@
     "lint:src": "eslint src",
     "lint:test": "eslint test",
     "precommit": "lint-staged",
-    "prepare": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test --passWithNoTests",
     "test:coverage": "tsdx test --coverage --passWithNoTests",
@@ -43,6 +42,7 @@
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "hygen": "^6.0.4",
     "majestic": "^1.8.0",
     "tsdx": "^0.14.1",
