chore: fixed tsconfig and eslint

--- a/vuex-common-stores/base-store/package.json
+++ b/vuex-common-stores/base-store/package.json
@@ -39,6 +39,7 @@
     "@kahirokunn/vuedts": "^1.3.4",
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue-i18n": "*",
