--- a/utils/vuex-utils/package.json
+++ b/utils/vuex-utils/package.json
@@ -14,7 +14,6 @@
     "lint:src": "eslint src",
     "lint:test": "eslint test",
     "precommit": "lint-staged",
-    "prepare": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test --passWithNoTests",
     "test:coverage": "tsdx test --coverage --passWithNoTests",
@@ -42,6 +41,7 @@
   "devDependencies": {
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "hygen": "^6.0.4",
     "majestic": "^1.8.0",
