--- a/clients/axios/package.json
+++ b/clients/axios/package.json
@@ -1,10 +1,8 @@
 {
+  "name": "@quasar-enterprise-monorepo/axios",
+  "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
   "version": "0.0.1",
   "license": "MIT",
-  "engines": {
-    "node": ">= 12",
-    "yarn": ">= 1"
-  },
   "main": "src/index.ts",
   "typings": "types/index.d.ts",
   "files": [
@@ -22,7 +20,6 @@
     "lint:src": "eslint src",
     "lint:test": "eslint test",
     "precommit": "lint-staged",
-    "prepare": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test --passWithNoTests",
     "test:coverage": "tsdx test --coverage --passWithNoTests",
@@ -33,8 +30,6 @@
     "update:check": "ncu",
     "update:update": "ncu -u"
   },
-  "name": "@quasar-enterprise-monorepo/axios",
-  "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
   "dependencies": {
     "axios": "^0.21.1"
   },
@@ -42,7 +37,9 @@
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "hygen": "^6.0.4",
+    "majestic": "^1.8.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typedoc": "^0.20.28",
@@ -50,5 +47,10 @@
     "typedoc-plugin-sourcefile-url": "^1.0.6",
     "typescript": "^4.1.5",
     "whatwg-fetch": "^3.6.1"
+  },
+  "peerDependencies": {},
+  "engines": {
+    "node": ">= 12",
+    "yarn": ">= 1"
   }
 }
