--- a/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/package.json
+++ b/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue-i18n": "*",
