--- a/clients/graphql/package.json
+++ b/clients/graphql/package.json
@@ -1,16 +1,10 @@
 {
+  "name": "@quasar-enterprise-monorepo/graphql",
+  "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
   "version": "0.0.1",
   "license": "MIT",
   "main": "src/index.ts",
   "types": "types/index.d.ts",
-  "files": [
-    "src",
-    "types"
-  ],
-  "engines": {
-    "node": ">= 12",
-    "yarn": ">= 1"
-  },
   "scripts": {
     "build": "tsdx build",
     "build:docs": "npm run build && npm run docs",
@@ -22,19 +16,16 @@
     "lint:src": "eslint src",
     "lint:test": "eslint test",
     "precommit": "lint-staged",
-    "prepare": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test --passWithNoTests",
-    "test:coverage": "tsdx test  --coverage --passWithNoTests",
+    "test:coverage": "tsdx test --coverage --passWithNoTests",
     "test:ui": "majestic",
     "test:unit": "tsdx test --updateSnapshot --passWithNoTests",
-    "test:watch": "tsdx test  --watch --passWithNoTests",
-    "test:watchAll": "tsdx test  --watchAll --passWithNoTests",
+    "test:watch": "tsdx test --watch --passWithNoTests",
+    "test:watchAll": "tsdx test --watchAll --passWithNoTests",
     "update:check": "ncu",
     "update:update": "ncu -u"
   },
-  "name": "@quasar-enterprise-monorepo/graphql",
-  "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
   "dependencies": {
     "apollo-boost": "0.4.9",
     "apollo-cache": "^1.3.5",
@@ -51,8 +42,10 @@
   "devDependencies": {
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "hygen": "^6.0.4",
+    "majestic": "^1.8.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typedoc": "^0.20.28",
@@ -60,5 +53,14 @@
     "typedoc-plugin-sourcefile-url": "^1.0.6",
     "typescript": "^4.1.5",
     "whatwg-fetch": "^3.6.1"
+  },
+  "peerDependencies": {},
+  "files": [
+    "types",
+    "src"
+  ],
+  "engines": {
+    "node": ">= 12",
+    "yarn": ">= 1"
   }
 }
