--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-loader": "^4.0.2",
     "husky": "^4.3.8",
     "hygen": "^6.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-date-mock": "^1.0.8",
     "jest-environment-jsdom-sixteen": "^1.0.3",
@@ -66,9 +67,6 @@
     "lint-staged": "^10.5.4",
     "majestic": "^1.8.0",
     "npm-check-updates": "^11.1.8",
-    "serverless": "2.25.2",
-    "serverless-prune-plugin": "1.4.3",
-    "serverless-s3-sync": "1.16.1",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5",
     "webpack": "^4.44.2",
