--- a/packages-boilerplate-copy-and-paste/quasar-app-extension-ui-component/package.json
+++ b/packages-boilerplate-copy-and-paste/quasar-app-extension-ui-component/package.json
@@ -41,6 +41,7 @@
     "@quasar-enterprise-monorepo/quasar-testing": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue-i18n": "*",
