--- a/packages-boilerplate-copy-and-paste/vue-ts-component-quasar/tsconfig.json
+++ b/packages-boilerplate-copy-and-paste/vue-ts-component-quasar/tsconfig.json
@@ -15,14 +15,16 @@
       "styles/*": [
         "src/styles/*"
       ],
+      "store/*": [
+        "src/store/*"
+      ],
       "tests/*": [
         "tests/*"
       ]
     }
   },
   "include": [
-    "./src",
-    "./tests"
+    "src"
   ],
   "exclude": [
     "node_modules",
