--- a/packages/eslint-import/package.json
+++ b/packages/eslint-import/package.json
@@ -32,6 +32,6 @@
   "dependencies": {
     "@pkgr/utils": "^0.6.0",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "2.22.1"
   }
 }
