--- a/packages/eslint-typescript/package.json
+++ b/packages/eslint-typescript/package.json
@@ -31,8 +31,7 @@
   "main": "index.js",
   "dependencies": {
     "@pkgr/utils": "^0.6.0",
-    "@typescript-eslint/eslint-plugin": "4.15.1",
-    "@typescript-eslint/parser": "4.15.1",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-import-resolver-typescript": "^2.4.0"
   }
