--- a/packages/eslint-vue-i18n/package.json
+++ b/packages/eslint-vue-i18n/package.json
@@ -30,6 +30,6 @@
     "rules"
   ],
   "dependencies": {
-    "eslint-plugin-vue-i18n": "^0.3.0"
+    "@intlify/eslint-plugin-vue-i18n": "^0.11.0"
   }
 }
