--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -29,7 +29,11 @@
     "rules"
   ],
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-promise": "^4.3.1"
   },
   "main": "index.js"
