--- a/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/tsconfig.json
+++ b/packages-boilerplate-copy-and-paste/vue-ts-component-plugin/tsconfig.json
@@ -24,10 +24,12 @@
     }
   },
   "include": [
-    "src"
+    "src",
+    "tests"
   ],
   "exclude": [
     "node_modules",
-    "_templates"
+    "_templates",
+    "dist"
   ]
 }
