--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test:silent": "jest --reporters jest-silent-reporter --collectCoverage=false",
     "test:jest": "jest --collectCoverage=false",
     "update:check": "ncu && lerna run update:check --stream",
-    "update:update": "ncu -u && lerna run update:update --stream && yarn install --force && yarn manypkg fix"
+    "update:update": "ncu -u && lerna run update:update --stream && yarn install --force"
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.13.0",
@@ -46,10 +46,12 @@
     "@types/node": "^14.14.31",
     "@types/vfile-message": "^2.0.0",
     "@types/webpack": "^4.41.26",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "commitizen": "^4.2.3",
     "concurrently": "^6.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.20.0",
+    "eslint": "7.20.0",
     "eslint-loader": "^4.0.2",
     "husky": "^4.3.8",
     "hygen": "^6.0.4",
@@ -57,7 +59,7 @@
     "jest": "^26.6.3",
     "jest-date-mock": "^1.0.8",
     "jest-environment-jsdom-sixteen": "^1.0.3",
-    "jest-localstorage-mock": "^2.4.6",
+    "jest-localstorage-mock": "^2.4.7",
     "jest-silent-reporter": "^0.4.0",
     "jest-watch-lerna-packages": "^1.1.0",
     "jest-watch-toggle-config": "^2.0.1",
@@ -66,9 +68,9 @@
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.4",
     "majestic": "^1.8.0",
-    "npm-check-updates": "^11.1.8",
-    "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5",
+    "npm-check-updates": "^11.1.9",
+    "ts-jest": "^26.5.2",
+    "typescript": "^4.2.2",
     "webpack": "^4.44.2",
     "webpack-manifest-plugin": "^3.0.0"
   },
