--- a/packages-boilerplate-copy-and-paste/quasar-webapp/package.json
+++ b/packages-boilerplate-copy-and-paste/quasar-webapp/package.json
@@ -50,7 +50,7 @@
     "transform-object-keys": "^1.0.3",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
-    "vue-i18n": "^8.22.4",
+    "vue-i18n": "^8.23.0",
     "vue-loadable": "^0.2.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
@@ -58,7 +58,8 @@
     "vuelidate-property-decorators": "^1.0.28",
     "vuex": "^3.6.2",
     "vuex-class": "^0.3.2",
-    "vuex-composition-helpers": "^1.0.22"
+    "vuex-composition-helpers": "^1.0.22",
+    "wallaby-vue-compiler": "1.0.6"
   },
   "devDependencies": {
     "@quasar-enterprise-monorepo/quasar-testing": "*",
