--- a/packages-boilerplate-copy-and-paste/quasar-app-extension-ui-component/tsconfig.json
+++ b/packages-boilerplate-copy-and-paste/quasar-app-extension-ui-component/tsconfig.json
@@ -24,10 +24,13 @@
     }
   },
   "include": [
-    "src"
+    "src",
+    "component",
+    "tests"
   ],
   "exclude": [
     "node_modules",
-    "_templates"
+    "_templates",
+    "dist"
   ]
 }
