--- a/applications/webapp/package.json
+++ b/applications/webapp/package.json
@@ -50,7 +50,7 @@
     "transform-object-keys": "^1.0.3",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
-    "vue-i18n": "^8.22.4",
+    "vue-i18n": "^8.23.0",
     "vue-loadable": "^0.2.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
@@ -58,26 +58,27 @@
     "vuelidate-property-decorators": "^1.0.28",
     "vuex": "^3.6.2",
     "vuex-class": "^0.3.2",
-    "vuex-composition-helpers": "^1.0.22"
+    "vuex-composition-helpers": "^1.0.22",
+    "wallaby-vue-compiler": "1.0.6"
   },
   "devDependencies": {
+    "@quasar-enterprise-monorepo/quasar-testing": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue-i18n": "*",
-    "@quasar-enterprise-monorepo/quasar-testing": "*",
+    "jest": "^26.6.3",
+    "majestic": "^1.8.0",
+    "dotenv-webpack": "^2.0.0",
+    "@types/vuelidate": "^0.7.13",
     "@quasar/cli": "^1.1.3",
     "@quasar/quasar-app-extension-dotenv": "^1.1.0",
     "@quasar/quasar-app-extension-testing": "^1.0.3",
     "@quasar/quasar-app-extension-testing-unit-jest": "^2.2.1",
     "@testing-library/jest-dom": "^5.11.9",
-    "@types/vuelidate": "^0.7.13",
     "@vue/test-utils": "^1.1.3",
-    "dotenv-webpack": "^2.0.0",
     "hygen": "^6.0.4",
-    "jest": "^26.6.3",
-    "majestic": "^1.8.0",
     "moment-locales-webpack-plugin": "^1.2.0",
     "vue-styleguidist": "^4.35.0",
     "workbox-webpack-plugin": "^6.1.1"
