--- a/clients/graphql/package.json
+++ b/clients/graphql/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@quasar-enterprise-monorepo/graphql",
   "author": "Heitor Ramon Ribeiro <heitor.ramon@gmail.com>",
-  "version": "0.0.1",
   "license": "MIT",
-  "main": "src/index.ts",
-  "types": "types/index.d.ts",
   "scripts": {
     "build": "tsdx build",
     "build:docs": "npm run build && npm run docs",
@@ -26,6 +23,16 @@
     "update:check": "ncu",
     "update:update": "ncu -u"
   },
+  "main": "src/index.ts",
+  "typings": "types/index.d.ts",
+  "engines": {
+    "node": ">= 12",
+    "yarn": ">= 1"
+  },
+  "files": [
+    "types",
+    "src"
+  ],
   "dependencies": {
     "apollo-boost": "0.4.9",
     "apollo-cache": "^1.3.5",
@@ -42,8 +49,8 @@
   "devDependencies": {
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
-    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
+    "@quasar-enterprise-monorepo/eslint-config-monorepo-jest": "*",
     "hygen": "^6.0.4",
     "majestic": "^1.8.0",
     "tsdx": "^0.14.1",
@@ -51,16 +58,8 @@
     "typedoc": "^0.20.28",
     "typedoc-plugin-markdown": "^3.5.0",
     "typedoc-plugin-sourcefile-url": "^1.0.6",
-    "typescript": "^4.1.5",
+    "typescript": "^4.2.2",
     "whatwg-fetch": "^3.6.1"
   },
-  "peerDependencies": {},
-  "files": [
-    "types",
-    "src"
-  ],
-  "engines": {
-    "node": ">= 12",
-    "yarn": ">= 1"
-  }
+  "peerDependencies": {}
 }
