refactor: fixed eslint packages

--- a/applications/webapp/package.json
+++ b/applications/webapp/package.json
@@ -59,26 +59,26 @@
     "vuex": "^3.6.2",
     "vuex-class": "^0.3.2",
     "vuex-composition-helpers": "^1.0.22",
-    "wallaby-vue-compiler": "1.0.6"
+    "wallaby-vue-compiler": "^1.0.6"
   },
   "devDependencies": {
-    "@quasar-enterprise-monorepo/quasar-testing": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-import": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-typescript": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue": "*",
     "@quasar-enterprise-monorepo/eslint-config-monorepo-vue-i18n": "*",
-    "jest": "^26.6.3",
-    "majestic": "^1.8.0",
-    "dotenv-webpack": "^2.0.0",
-    "@types/vuelidate": "^0.7.13",
+    "@quasar-enterprise-monorepo/quasar-testing": "*",
     "@quasar/cli": "^1.1.3",
     "@quasar/quasar-app-extension-dotenv": "^1.1.0",
     "@quasar/quasar-app-extension-testing": "^1.0.3",
     "@quasar/quasar-app-extension-testing-unit-jest": "^2.2.1",
     "@testing-library/jest-dom": "^5.11.9",
+    "@types/vuelidate": "^0.7.13",
     "@vue/test-utils": "^1.1.3",
+    "dotenv-webpack": "^2.0.0",
     "hygen": "^6.0.4",
+    "jest": "^26.6.3",
+    "majestic": "^1.8.0",
     "moment-locales-webpack-plugin": "^1.2.0",
     "vue-styleguidist": "^4.35.0",
     "workbox-webpack-plugin": "^6.1.1"
