--- a/packages-boilerplate-copy-and-paste/service-plugin/tsconfig.doc.json
+++ b/packages-boilerplate-copy-and-paste/service-plugin/tsconfig.doc.json
@@ -3,5 +3,5 @@
   "mode": "modules",
   "out": "docs",
   "excludeExternals": true,
-  "exclude": ["./test"]
+  "exclude": ["./test", "types", "_templates", "dist", "node_modules"]
 }
