--- a/vuex-common-stores/base-store/tsconfig.json
+++ b/vuex-common-stores/base-store/tsconfig.json
@@ -24,10 +24,12 @@
     }
   },
   "include": [
-    "src"
+    "src",
+    "tests"
   ],
   "exclude": [
     "node_modules",
-    "_templates"
+    "_templates",
+    "dist"
   ]
 }
